--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "frontend-hms": "file:",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
